// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FutureViewSubTask with null SubTask matches snapshot. 1`] = `null`;

exports[`FutureViewSubTask(false, false, false) matches snapshot 1`] = `
<div
  className="SubTask"
>
  <label
    className="SubTaskCheckBox CheckBox InvertedCheckBox"
  >
    <input
      defaultChecked={false}
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      type="checkbox"
    />
  </label>
  <span
    className="TaskText"
    style={Object {}}
  >
    foo
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Pin to Focus"
  >
    <img
      alt="Pin to Focus"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/pin-2-dark-outline.svg"
    />
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Delete"
  >
    <img
      alt="Delete"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/XDark.svg"
    />
  </span>
</div>
`;

exports[`FutureViewSubTask(false, false, true) matches snapshot 1`] = `
<div
  className="SubTask"
>
  <label
    className="SubTaskCheckBox CheckBox InvertedCheckBox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      onClick={[Function]}
      tabIndex={0}
      type="checkbox"
    />
    <span
      className="CheckBoxCheckMark"
    />
  </label>
  <span
    className="TaskText"
    style={
      Object {
        "textDecoration": "line-through",
      }
    }
  >
    foo
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Pin to Focus"
  >
    <img
      alt="Pin to Focus"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/pin-2-dark-outline.svg"
    />
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Delete"
  >
    <img
      alt="Delete"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/XDark.svg"
    />
  </span>
</div>
`;

exports[`FutureViewSubTask(false, true, false) matches snapshot 1`] = `
<div
  className="SubTask"
>
  <label
    className="SubTaskCheckBox CheckBox InvertedCheckBox"
  >
    <input
      defaultChecked={true}
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      type="checkbox"
    />
    <span
      className="CheckBoxCheckMark"
    />
  </label>
  <span
    className="TaskText"
    style={
      Object {
        "textDecoration": "line-through",
      }
    }
  >
    foo
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Pin to Focus"
  >
    <img
      alt="Pin to Focus"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/pin-2-dark-outline.svg"
    />
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Delete"
  >
    <img
      alt="Delete"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/XDark.svg"
    />
  </span>
</div>
`;

exports[`FutureViewSubTask(false, true, true) matches snapshot 1`] = `
<div
  className="SubTask"
>
  <label
    className="SubTaskCheckBox CheckBox InvertedCheckBox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      onClick={[Function]}
      tabIndex={0}
      type="checkbox"
    />
    <span
      className="CheckBoxCheckMark"
    />
  </label>
  <span
    className="TaskText"
    style={
      Object {
        "textDecoration": "line-through",
      }
    }
  >
    foo
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Pin to Focus"
  >
    <img
      alt="Pin to Focus"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/pin-2-dark-outline.svg"
    />
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Delete"
  >
    <img
      alt="Delete"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/XDark.svg"
    />
  </span>
</div>
`;

exports[`FutureViewSubTask(true, false, false) matches snapshot 1`] = `
<div
  className="SubTask"
>
  <label
    className="SubTaskCheckBox CheckBox InvertedCheckBox"
  >
    <input
      defaultChecked={false}
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      type="checkbox"
    />
  </label>
  <span
    className="TaskText"
    style={Object {}}
  >
    foo
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Unpin from Focus"
  >
    <img
      alt="Unpin from Focus"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/pin-2-dark-filled.svg"
    />
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Delete"
  >
    <img
      alt="Delete"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/XDark.svg"
    />
  </span>
</div>
`;

exports[`FutureViewSubTask(true, false, true) matches snapshot 1`] = `
<div
  className="SubTask"
>
  <label
    className="SubTaskCheckBox CheckBox InvertedCheckBox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      onClick={[Function]}
      tabIndex={0}
      type="checkbox"
    />
    <span
      className="CheckBoxCheckMark"
    />
  </label>
  <span
    className="TaskText"
    style={
      Object {
        "textDecoration": "line-through",
      }
    }
  >
    foo
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Unpin from Focus"
  >
    <img
      alt="Unpin from Focus"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/pin-2-dark-filled.svg"
    />
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Delete"
  >
    <img
      alt="Delete"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/XDark.svg"
    />
  </span>
</div>
`;

exports[`FutureViewSubTask(true, true, false) matches snapshot 1`] = `
<div
  className="SubTask"
>
  <label
    className="SubTaskCheckBox CheckBox InvertedCheckBox"
  >
    <input
      defaultChecked={true}
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      type="checkbox"
    />
    <span
      className="CheckBoxCheckMark"
    />
  </label>
  <span
    className="TaskText"
    style={
      Object {
        "textDecoration": "line-through",
      }
    }
  >
    foo
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Unpin from Focus"
  >
    <img
      alt="Unpin from Focus"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/pin-2-dark-filled.svg"
    />
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Delete"
  >
    <img
      alt="Delete"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/XDark.svg"
    />
  </span>
</div>
`;

exports[`FutureViewSubTask(true, true, true) matches snapshot 1`] = `
<div
  className="SubTask"
>
  <label
    className="SubTaskCheckBox CheckBox InvertedCheckBox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      onClick={[Function]}
      tabIndex={0}
      type="checkbox"
    />
    <span
      className="CheckBoxCheckMark"
    />
  </label>
  <span
    className="TaskText"
    style={
      Object {
        "textDecoration": "line-through",
      }
    }
  >
    foo
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Unpin from Focus"
  >
    <img
      alt="Unpin from Focus"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/pin-2-dark-filled.svg"
    />
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="Delete"
  >
    <img
      alt="Delete"
      className="SamwiseIconDefaultStyle TaskIcon"
      src="/svgs/XDark.svg"
    />
  </span>
</div>
`;
